--- a/src/components/MoneyBucketManager/MoneyBucketManager.scss
+++ b/src/components/MoneyBucketManager/MoneyBucketManager.scss
@@ -20,9 +20,9 @@
 
     .small-bucket {
         display: flex;
-        flex-direction: row;
+        // flex-direction: row;
         flex-wrap: wrap;
-        //align-items: center;
+        justify-content: center;
         gap: 2em;
     
         .bucket {
